Use JDK17 explicitly